# AInonymous

./: .gitignore  404.html  Cargo.toml  DISCLAIMER.md  HYBRIDNODE_APPLY.md  Makefile  README.md  README_HYBRIDNODE_SNIPPET.md  ROADMAP.md  dna.yaml  index.en.html  index.html
.github/workflows/: ci.yml  hybridnode-validate.yml  rust.yml
assets/mocks/: README.md
crates/ainonymous-cli/: Cargo.toml
crates/ainonymous-cli/src/: main.rs
crates/ainonymous-cli/src/commands/: blackboard.rs  control.rs  goose.rs  mcp.rs  mod.rs  model.rs  nodes.rs  start.rs  status.rs
crates/ainonymous-daemon/: Cargo.toml
crates/ainonymous-daemon/src/: conductor.rs  conductor_client.rs  config.rs  heartbeat.rs  holochain.rs  llama.rs  main.rs  pipeline_client.rs  router.rs
crates/ainonymous-mcp/: Cargo.toml
crates/ainonymous-mcp/src/: main.rs
crates/ainonymous-proxy/: Cargo.toml
crates/ainonymous-proxy/src/: main.rs  mesh_client.rs  router.rs  state.rs
crates/ainonymous-proxy/src/handlers/: chat.rs  mesh.rs  mod.rs  models.rs
crates/ainonymous-quic/: Cargo.toml
crates/ainonymous-quic/src/: codec.rs  error.rs  lib.rs  listener.rs  mtls.rs  session.rs  transfer.rs
crates/ainonymous-quic/tests/: mtls_handshake.rs
crates/ainonymous-types/: Cargo.toml
crates/ainonymous-types/src/: api.rs  errors.rs  inference.rs  lib.rs  node.rs  warrants.rs
crates/hybridnode-core/: Cargo.toml
crates/hybridnode-core/src/: config.rs  error.rs  identity.rs  lib.rs  model.rs  observability.rs  scheduler.rs  sdwan.rs  topology.rs
crates/hybridnode-daemon/: Cargo.toml
crates/hybridnode-daemon/src/: main.rs
dnas/ainonymous-core/: Cargo.toml  happ.yaml
dnas/ainonymous-core/.cargo/: config.toml
dnas/ainonymous-core/dnas/agent-registry/workdir/: dna.yaml
dnas/ainonymous-core/dnas/agent-registry/zomes/coordinator/: Cargo.toml
dnas/ainonymous-core/dnas/agent-registry/zomes/coordinator/src/: lib.rs
dnas/ainonymous-core/dnas/agent-registry/zomes/integrity/: Cargo.toml
dnas/ainonymous-core/dnas/agent-registry/zomes/integrity/src/: lib.rs
dnas/ainonymous-core/dnas/blackboard/workdir/: dna.yaml
dnas/ainonymous-core/dnas/blackboard/zomes/coordinator/: Cargo.toml
dnas/ainonymous-core/dnas/blackboard/zomes/coordinator/src/: lib.rs
dnas/ainonymous-core/dnas/blackboard/zomes/integrity/: Cargo.toml
dnas/ainonymous-core/dnas/blackboard/zomes/integrity/src/: lib.rs
dnas/ainonymous-core/dnas/inference-mesh/workdir/: dna.yaml
dnas/ainonymous-core/dnas/inference-mesh/zomes/coordinator/: Cargo.toml
dnas/ainonymous-core/dnas/inference-mesh/zomes/coordinator/src/: lib.rs
dnas/ainonymous-core/dnas/inference-mesh/zomes/integrity/: Cargo.toml
dnas/ainonymous-core/dnas/inference-mesh/zomes/integrity/src/: lib.rs
dnas/hybridnode/: happ.yaml
dnas/hybridnode/dnas/hybridnode-core/workdir/: dna.yaml
dnas/hybridnode/dnas/hybridnode-core/zomes/coordinator/: Cargo.toml
dnas/hybridnode/dnas/hybridnode-core/zomes/coordinator/src/: lib.rs
dnas/hybridnode/dnas/hybridnode-core/zomes/integrity/: Cargo.toml
dnas/hybridnode/dnas/hybridnode-core/zomes/integrity/src/: lib.rs
docs/: ADR_001_coordinator_decode_loop.md  AGENTS_INTEGRATION.md  API_SPEC.md  ARCHITECTURE.md  DEV_PLAN_TESTNET_2NODES.md  HOLOCHAIN_BUILD.md  HOLOCHAIN_ZOMES.md  HYBRIDNODE.md  HYBRIDNODE_ARCHITECTURE.md  HYBRIDNODE_CARGO_PATCH.md  HYBRIDNODE_P2P.md  LLAMA_CPP_PATCH.md  NETWORK.md  NODE_SCORING.md  PALIER_E.md  PALIER_F.md  PYTORCH_INTEGRATION.md  TESTNET_2NODES.md  WHY_AINONYMOUS.md  node-scoring-d3-dashboard.html  node-scoring-leaflet.html  node-scoring-visualizer.html
examples/pytorch/: README.md  pyproject.toml  requirements.txt
examples/pytorch/ainonymous_torch/: __init__.py  activation_transfer.py  client.py  distributed_inference.py  model_export.py  pipeline.py
examples/pytorch/examples/: 01_basic_chat.py  02_activation_transfer.py  03_pipeline_split.py  04_export_to_gguf.py
examples/pytorch/tests/: test_activation_transfer.py
hybridnode/: README.md
hybridnode/configs/: ainonymous.hybridnode.yaml  generic-project.hybridnode.yaml
hybridnode/policies/: model-validation.yaml  observability.yaml  sdwan-policy.yaml  security-baseline.yaml
hybridnode/schemas/: hybridnode.schema.json
hybridnode/specs/: hybridnode.yaml
qwen3-codegen/backend/: .env.example  package.json  server.js
qwen3-codegen/frontend/: index.html  package.json
qwen3-codegen/frontend/src/: App.jsx
scripts/: build-happ.sh  pipeline_server.py  repack-happ.py  run_t51_signal_test.sh  setup_holochain_wsl.sh  smoke_test_t41.sh
scripts/hybridnode/: init_project.sh  validate_config.py
scripts/testnet/: conductor_t51.yaml  daemon_t41.toml  daemon_t51.toml  mock_pipeline_server.py  run_testnet_2.sh  run_testnet_2_mock.sh  validate_testnet_2.sh
site/: ainonymous.html  architecture.html  enterprise-en.html  enterprise.html  index.en.html  index.html  landing-en.html  landing.html
visualizer/: README.md  index.html  package.json
visualizer/src/: App.jsx  index.css
zomes/warrants/: README.md
zomes/warrants/coordinator/: Cargo.toml
zomes/warrants/coordinator/src/: lib.rs
zomes/warrants/integrity/: Cargo.toml
zomes/warrants/integrity/src/: lib.rs
