[workspace]
resolver = "2"
members = [
    "crates/ainonymous-types",
    "crates/ainonymous-proxy",
    "crates/ainonymous-quic",
    "crates/ainonymous-daemon",
    "crates/ainonymous-cli",
    "crates/ainonymous-mcp",
]
# Les zomes Holochain sont dans leur propre workspace : dnas/ainonymous-core/
# (profil WASM distinct: opt-level=z, panic=abort)

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AInonymous Contributors"]
license = "Apache-2.0"
rust-version = "1.80"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

# HTTP
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
hyper = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Sérialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# QUIC / réseau
quinn = "0.11"
iroh = "0.26"
iroh-net = "0.26"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logs
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "1"
bytes = "1"
zstd = "0.13"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
dirs = "5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
