[package]
name = "ainonymous-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ainonymous"
path = "src/main.rs"

[dependencies]
ainonymous-types = { path = "../ainonymous-types" }

tokio     = { workspace = true }
clap      = { workspace = true }
anyhow    = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
reqwest   = { workspace = true }
tracing   = { workspace = true }
tracing-subscriber = { workspace = true }
dirs      = { workspace = true }
