[package]
name = "ainonymous-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ainonymous-daemon"
path = "src/main.rs"

[dependencies]
ainonymous-types  = { path = "../ainonymous-types" }
ainonymous-quic   = { path = "../ainonymous-quic" }

tokio       = { workspace = true }
futures     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
uuid        = { workspace = true }
reqwest     = { workspace = true }
axum        = { workspace = true }
tower-http  = { workspace = true }
config      = { workspace = true }
dirs        = { workspace = true }
chrono      = { workspace = true }
