[package]
name = "ainonymous-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ainonymous-daemon"
path = "src/main.rs"

[dependencies]
ainonymous-types  = { path = "../ainonymous-types" }
ainonymous-quic   = { path = "../ainonymous-quic", features = ["secure-keyring"] }
quinn       = { workspace = true }

tokio       = { workspace = true }
futures     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
uuid        = { workspace = true }
reqwest     = { workspace = true }
axum        = { workspace = true }
tower-http  = { workspace = true }
config      = { workspace = true }
dirs        = { workspace = true }
chrono      = { workspace = true }
base64      = { workspace = true }
hex         = { workspace = true }

# Intégration Holochain réelle (mode `holochain.backend = "conductor"`).
# default-features=false : client websocket + signature en mémoire
# (ClientAgentSigner), SANS tirer le conducteur `holochain` (wasmer/iroh).
holochain_client     = { version = "0.8.1", default-features = false }
holochain_zome_types = "0.6.2"
holochain_types      = { version = "0.6.2", default-features = false }
