[package]
name = "ainonymous-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ainonymous-mcp"
path = "src/main.rs"

[dependencies]
ainonymous-types = { path = "../ainonymous-types" }

tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest    = { workspace = true }
clap       = { workspace = true }
