[package]
name = "ainonymous-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ainonymous-proxy"
path = "src/main.rs"

[dependencies]
ainonymous-types = { path = "../ainonymous-types" }

# Async
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

# HTTP
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }

# Sérialisation
serde = { workspace = true }
serde_json = { workspace = true }

# Utils
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
