[package]
name = "ainonymous-quic"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ainonymous-types = { path = "../ainonymous-types" }

tokio = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
zstd = { workspace = true }
sha2 = { workspace = true }

# QUIC
quinn = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }

# mTLS ed25519
ed25519-dalek = { workspace = true }
x509-parser = { workspace = true }
hex = { workspace = true }

# iroh pour NAT traversal (optionnel, fallback quinn direct)
iroh = { workspace = true, optional = true }

# Keyring OS natif : stocke la seed ed25519 dans le trousseau de l'OS
# (macOS Keychain / Windows Credential Manager / Linux libsecret) plutôt qu'en clair
keyring = { workspace = true, optional = true }

[features]
default = ["nat-traversal"]
nat-traversal = ["iroh"]
# Protège la seed ed25519 via le keyring natif de l'OS.
secure-keyring = ["keyring"]
