[package]
name = "hybridnode-core"
version = "0.1.0"
edition = "2021"
description = "HybridNode: SD-WAN + Holochain + QUIC/mTLS scheduling layer for AInonymous"
license = "MIT OR Apache-2.0"

[features]
default = ["mock-sdwan"]
mock-sdwan = []
vmanage = ["reqwest"]
velocloud = ["reqwest"]
private-network = []

[dependencies]
# Holochain client
holochain_client = "0.6"
hdk = { version = "0.6.1", optional = true }

# Networking
iroh-net = "0.23"
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
ed25519-dalek = { version = "2", features = ["pkcs8"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# HTTP (for SD-WAN REST APIs)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], optional = true }

# Observability
prometheus-client = "0.22"
opentelemetry = { version = "0.22", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

# Utilities
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
