[package]
name = "hybridnode-daemon"
version = "0.1.0"
edition = "2021"
description = "HybridNode daemon binary — SD-WAN + Holochain + QUIC/mTLS inference node"
license = "MIT OR Apache-2.0"

[[bin]]
name = "hybridnode"
path = "src/main.rs"

[features]
default = ["mock-sdwan"]
mock-sdwan = ["hybridnode-core/mock-sdwan"]
vmanage = ["hybridnode-core/vmanage"]
private-network = ["hybridnode-core/private-network"]

[dependencies]
hybridnode-core = { path = "../hybridnode-core" }

tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
anyhow = "1"
