[package]
name = "warrants_coordinator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hdk = { workspace = true }
warrants_integrity = { path = "../integrity" }
serde = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
