[package]
name = "agent-registry-coordinator"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "agent_registry_coordinator"
crate-type = ["cdylib", "rlib"]

[dependencies]
hdk = "0.4"
agent-registry-integrity = { path = "../integrity" }
serde = { version = "1", features = ["derive"] }
