[package]
name = "inference-mesh-coordinator"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "inference_mesh_coordinator"
crate-type = ["cdylib", "rlib"]

[dependencies]
hdk = "0.4"
inference-mesh-integrity = { path = "../integrity" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
