[package]
name = "inference-mesh-integrity"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "inference_mesh_integrity"
crate-type = ["cdylib", "rlib"]

[dependencies]
hdi = "0.7"
holochain_serialized_bytes = "0.0.57"
serde = { version = "1", features = ["derive"] }
